Lugosi.jj

options {
  STATIC = false;
  DEBUG_LOOKAHEAD = false;
}

PARSER_BEGIN(Lugosi)

    package parser;
    import java.io.*;
    import syntacticTree.*;
    import java.util.ArrayList;

    import ast.*;
    public class Lugosi {

      final static String Version = "Lugosi Compiler / Transpiler 1.0 - 2024";

      public static void main(String args[])
          throws ParseException,IOException 
      {

         Lugosi analisador = new Lugosi(new FileInputStream(args[0]));
         Prog ast = analisador.Lugosi();
         String code = ast.gen_cpp();

         System.out.println(code);

        // System.out.println("\nVariaveis da main: ");
        // for(VarDecl v : ast.main.vars)
        // {
        //   System.out.print(v.type + "  "); 
        //   for(String s : v.var)
        //   {
        //      System.out.print(s + " ");
        //   }
        //   System.out.println();
        // }

        // System.out.println("\nComandos da main: ");
        // for(Comando c : ast.main.coms)
        // {
        //    if(c instanceof CIf)
        //    {
        //      System.out.println(1);
        //    }else if(c instanceof CAtribuicao)
        //    {
        //      System.out.println(2);
        //    }
        // }

        // System.out.println("\nFunções : ");
        // for(Fun f : ast.fun)
        // {
        //    System.out.println(f.retorno + " " + f.nome);
        // }

      }

    }

PARSER_END(Lugosi)

// # Antes de token, para fazer uso de 
// expressões regex como macro para ficar mais
// fácil de ler.

SKIP : { <SKIP_WS: <WHITE_SPACE>> }

TOKEN :
{
     <#ALPHA: ["a"-"z","A"-"Z"]>
    |<#DIGIT: ["0"-"9"] >
    |<#ALPHA_NUMERIC: <ALPHA>|<DIGIT> >
    |<#SPECIAL_CHAR: [",","!"]>
    |<#NEWLINE: ["\n","\r"]|("\r\n") > 
    |<#WHITE_SPACE:  [" ","\t"]|<NEWLINE> > 
}

TOKEN :
{
      <MAIN: "main">
    | <ACHAVES: "{">
    | <FCHAVES: "}">
    | <VOID: "void">
    | <LET: "let">
    | <FLOAT: "float">
    | <STRING: "string">
    | <INT: "int">
    | <SEMICOLON: ";">
    | <BOOLEAN: "bool">
    | <ATTRIB: ":=">

    | <APAREN: "(">
    | <FPAREN: ")">
    | <IF: "if">
    | <ELSE: "else">
    | <WHILE: "while">
    | <DO: "do">
    | <READIO: "readIO">
    | <RETURN: "return">
    | <PRINTIO: "printIO">

    | <TRUE: "true">
    | <FALSE: "false">
    | <PLUS: "+">
    | <MINUS: "-">
    | <MULT: "*">
    | <DIV: "/">
    | <AND: "&&">
    | <OR: "||">
    | <LESSOP: "<">
    | <MOREOP: ">">
    | <LESSEQ: "<=">
    | <MOREEQ: ">=">
    | <EQUALS: "==">
    | <MODULO: "%">

    | <DEF: "def">
    | <COMMA: ",">
}

TOKEN :
{
     <NUM : (<DIGIT>)+("."(<DIGIT>)+)?("E"("-"|"+")?(<DIGIT>)+)?>
    |<ID: <ALPHA>(<ALPHA_NUMERIC>)* ("_"(<ALPHA_NUMERIC>)+)?>
    |<TEMPLATE_LITERAL: ["`"](~["`"])*["`"]>
    |<STRING_LITERAL: "\""(~["\n","\r","\""])*"\"" >
}

Prog Lugosi ():
{ 
  Prog programa = null;
  Main main = null;
  ArrayList<Fun>  post_func = null;
  ArrayList<Fun>  pre_func = null;
} 
{
  ((pre_func = FUNC())? (main = MAIN()) (post_func = FUNC())? <EOF>
  { 
    post_func.addAll(pre_func);
    return new Prog(main, post_func); 
  })
}

Main MAIN():
{
  ArrayList<VarDecl> vars = null;
  ArrayList<Comando> coms = null;
}
{
  (<VOID>
  <MAIN>
  <ACHAVES>
  (vars = VARDECL()) 
  (coms = SEQCOMANDOS())
  <FCHAVES>)
  { return new Main(vars, coms); }
}

ArrayList<VarDecl> VARDECL():
{
  ArrayList<VarDecl> vars = new ArrayList<VarDecl>();
  VarDecl var = null;
}
{
  ( var = VARDECL_S() { vars.add(var); } )* 
  { return vars; } 
}

VarDecl VARDECL_S():
{
   ArrayList<String> ids;
   String type = null;
}
{
  (<LET> 
  (type = TIPO())
  (ids = LISTID()) 
  <SEMICOLON>)
  { return new VarDecl(type, ids); }
}

ArrayList<String> LISTID():
{
  ArrayList<String> ids = new ArrayList<String>();
  Token id = null;
}
{
  ((id = <ID> { ids.add(id.image); } )
  ( LISTID_L(ids)))
  { return ids; }
}

void LISTID_L(ArrayList<String> ids):
{ Token id = null; }
{
    (
      <COMMA> 
      (id = <ID> { ids.add(id.image); })
    )*
}

String TIPO():
{ Token t = null; }
{
    (t = <FLOAT> | t = <BOOLEAN> | t = <VOID> | t = <STRING> | t = <INT>)
    { return t.image; }
}

ArrayList<Comando> SEQCOMANDOS():
{ 
    ArrayList<Comando> coms = new ArrayList<Comando>();
    Comando com = null;
}
{
  (com=COMANDO() { coms.add(com); } )*  
  { return coms; }
}

Comando COMANDO() : 
{
  Token t = null;
  Token id   = null;
  Token readio = null;
  Exp exp = null;
  ArrayList<Exp> exps = null;
  ArrayList<Comando> coms = null;
}
{
    LOOKAHEAD(3) 
         ((id=<ID>)
          <ATTRIB>
         (readio=<READIO>)
          <APAREN> 
          <FPAREN>
          <SEMICOLON>)
          { return new CReadInput(readio.beginLine, id.image); }
  |
    LOOKAHEAD(2) 
    ((id=<ID>)
    <ATTRIB>
    (exp=EXP())
    <SEMICOLON>)
    { return new CAtribuicao(id.beginLine, id.image, exp); }
  | 
    LOOKAHEAD(2) 
    ((id=<ID>) 
      <APAREN>
    (exps=LISTAEXP())
      <FPAREN>
      <SEMICOLON>)
      { return new CChamadaFun(id.beginLine, id.image, exps); }

  | ( (t=<IF>)
      (exp=EXP())
      <ACHAVES>
      (coms=SEQCOMANDOS())
      <FCHAVES>
      <SEMICOLON>)
      { return new CIf(t.beginLine, exp, coms); }

  |  ( (t=<WHILE>)
       <APAREN>
       (exp=EXP())
       <FPAREN>
       <DO> 
       <ACHAVES> 
       (coms=SEQCOMANDOS())
       <FCHAVES>
       <SEMICOLON>)
       { return new CWhile(t.beginLine, exp, coms); } 


  | ( (t=<RETURN>)
      (exp=EXP())
      <SEMICOLON> )
      { return new CReturn(t.beginLine, exp); }
  | ( (t=<PRINTIO>)
      (exp=EXP())
      <SEMICOLON> )
      { return new CPrint(t.beginLine, exp); }
}

Exp EXP():
{ 
  String t = null;
  Exp exp1 = null;
  Exp exp2 = null;
  Exp result = null;
}
{
    ((<APAREN>
    (exp1 = EXP())
    (t = OP())
    (exp2 = EXP())
    <FPAREN>
    { result=new EOpExp(t, exp1, exp2); })
    |
    (exp1=FATOR() { result=exp1; }))
    { return result; }
}

Exp FATOR() : 
{
   Token id = null;
   Token num = null;
   Token str_literal = null;
   ArrayList<Exp> args = null;
}
{
      LOOKAHEAD(2)
     ((id=<ID>)
      <APAREN>
      (args=LISTAEXP())
      <FPAREN>
      { return new EChamadaFun(id.image, args); })

    | (id=<ID>{return new EVar(id.image);}) 
    | (num=<NUM>{return new EFloat(Float.parseFloat(num.image));})
    | (str_literal=<STRING_LITERAL>{ return null; })
    | (<TRUE>{ return new ETrue(); })
    | (<FALSE>{ return new EFalse(); })
}

String OP():
{
  Token t = null;
}
{
    ((t=<PLUS>)
   |(t=<MINUS>)
   |(t=<MULT>)
   |(t=<DIV>)
   |(t=<AND>)
   |(t=<OR>)
   |(t=<LESSOP>)
   |(t=<MOREOP>)
   |(t=<EQUALS>)
   |(t=<LESSEQ>)
   |(t=<MOREEQ>)
   |(t=<MODULO>))
   { return t.image; }
}

ArrayList<Exp> LISTAEXP():
{
  ArrayList<Exp> exps = new ArrayList<Exp>();
  Exp exp = null;
}
{
   ((exp=EXP() {exps.add(exp);} )
    LISTAEXP_L(exps))
    {return exps;}
}

void LISTAEXP_L(ArrayList<Exp> exps):
{
  Exp exp = null;
}
{
  (<COMMA>
   (exp=EXP() {exps.add(exp);}) )*
}

ArrayList<ParamFormalFun> LISTAARG():
{
  String type = null;
  Token var_id;
  ArrayList<ParamFormalFun> params = new ArrayList<ParamFormalFun>();
}
{
  (type=TIPO())
  (var_id=<ID> { params.add(new ParamFormalFun(type, var_id.image));} )
   LISTAARG_L(params)
  {return params;}
}

void LISTAARG_L(ArrayList<ParamFormalFun> params) :
{
  String type = null;
  Token rvar_id = null;
}
{
  (
    <COMMA> 
    (type=TIPO())
    (rvar_id=<ID>) 
    { params.add( new ParamFormalFun(type, rvar_id.image) ); }
  )*
}

ArrayList<Fun> FUNC() :
{
    ArrayList<Fun> funs = new ArrayList<Fun>();
    Fun fun = null;
}
{
    (fun=FUNC_D(){funs.add(fun);}) FUNC_L(funs)
    { return funs; }
}

void FUNC_L(ArrayList<Fun> funs):
{
  Fun fun = null;
}
{
    (fun=FUNC_D(){funs.add(fun);})*
}

Fun FUNC_D() :
{
  Token name;
  ArrayList<VarDecl> vars = null;
  ArrayList<Comando> coms = null;
  ArrayList<ParamFormalFun> params = null;
  String retorno = null;
}
{
    (<DEF> 
    (retorno=TIPO()) 
    (name=<ID>)
    <APAREN>
    (params=LISTAARG())
    <FPAREN> 
    <ACHAVES> 
    (vars=VARDECL())
    (coms=SEQCOMANDOS())
    <FCHAVES>
    { return new Fun(name.image, params, retorno, vars, coms); } )

}
