Lugosi.java
/* Lugosi.java */
/* Generated By:JavaCC: Do not edit this line. Lugosi.java */
    package parser;
    import java.io.*;
    import syntacticTree.*;
    import java.util.ArrayList;

    import ast.*;
    public class Lugosi implements LugosiConstants {

      final static String Version = "Lugosi Compiler / Transpiler 1.0 - 2024";

      public static void main(String args[])
          throws ParseException,IOException
      {

         Lugosi analisador = new Lugosi(new FileInputStream(args[0]));
         Prog ast = analisador.Lugosi();
         String code = ast.gen_cpp();

         System.out.println(code);

        // System.out.println("\nVariaveis da main: ");
        // for(VarDecl v : ast.main.vars)
        // {
        //   System.out.print(v.type + "  "); 
        //   for(String s : v.var)
        //   {
        //      System.out.print(s + " ");
        //   }
        //   System.out.println();
        // }

        // System.out.println("\nComandos da main: ");
        // for(Comando c : ast.main.coms)
        // {
        //    if(c instanceof CIf)
        //    {
        //      System.out.println(1);
        //    }else if(c instanceof CAtribuicao)
        //    {
        //      System.out.println(2);
        //    }
        // }

        // System.out.println("\nFunções : ");
        // for(Fun f : ast.fun)
        // {
        //    System.out.println(f.retorno + " " + f.nome);
        // }

      }

  final public Prog Lugosi() throws ParseException {Prog programa = null;
  Main main = null;
  ArrayList<Fun>  post_func = null;
  ArrayList<Fun>  pre_func = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DEF:{
      pre_func = FUNC();
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    main = MAIN();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DEF:{
      post_func = FUNC();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    jj_consume_token(0);
post_func.addAll(pre_func);
    {if ("" != null) return new Prog(main, post_func);}
    throw new Error("Missing return statement in function");
}

  final public Main MAIN() throws ParseException {ArrayList<VarDecl> vars = null;
  ArrayList<Comando> coms = null;
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(ACHAVES);
    vars = VARDECL();
    coms = SEQCOMANDOS();
    jj_consume_token(FCHAVES);
{if ("" != null) return new Main(vars, coms);}
    throw new Error("Missing return statement in function");
}

  final public ArrayList<VarDecl> VARDECL() throws ParseException {ArrayList<VarDecl> vars = new ArrayList<VarDecl>();
  VarDecl var = null;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LET:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_1;
      }
      var = VARDECL_S();
vars.add(var);
    }
{if ("" != null) return vars;}
    throw new Error("Missing return statement in function");
}

  final public VarDecl VARDECL_S() throws ParseException {ArrayList<String> ids;
   String type = null;
    jj_consume_token(LET);
    type = TIPO();
    ids = LISTID();
    jj_consume_token(SEMICOLON);
{if ("" != null) return new VarDecl(type, ids);}
    throw new Error("Missing return statement in function");
}

  final public ArrayList<String> LISTID() throws ParseException {ArrayList<String> ids = new ArrayList<String>();
  Token id = null;
    id = jj_consume_token(ID);
ids.add(id.image);
    LISTID_L(ids);
{if ("" != null) return ids;}
    throw new Error("Missing return statement in function");
}

  final public void LISTID_L(ArrayList<String> ids) throws ParseException {Token id = null;
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMMA);
      id = jj_consume_token(ID);
ids.add(id.image);
    }
}

  final public String TIPO() throws ParseException {Token t = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case FLOAT:{
      t = jj_consume_token(FLOAT);
      break;
      }
    case BOOLEAN:{
      t = jj_consume_token(BOOLEAN);
      break;
      }
    case VOID:{
      t = jj_consume_token(VOID);
      break;
      }
    case STRING:{
      t = jj_consume_token(STRING);
      break;
      }
    case INT:{
      t = jj_consume_token(INT);
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return t.image;}
    throw new Error("Missing return statement in function");
}

  final public ArrayList<Comando> SEQCOMANDOS() throws ParseException {ArrayList<Comando> coms = new ArrayList<Comando>();
    Comando com = null;
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:
      case WHILE:
      case RETURN:
      case PRINTIO:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        break label_3;
      }
      com = COMANDO();
coms.add(com);
    }
{if ("" != null) return coms;}
    throw new Error("Missing return statement in function");
}

  final public Comando COMANDO() throws ParseException {Token t = null;
  Token id   = null;
  Token readio = null;
  Exp exp = null;
  ArrayList<Exp> exps = null;
  ArrayList<Comando> coms = null;
    if (jj_2_1(3)) {
      id = jj_consume_token(ID);
      jj_consume_token(ATTRIB);
      readio = jj_consume_token(READIO);
      jj_consume_token(APAREN);
      jj_consume_token(FPAREN);
      jj_consume_token(SEMICOLON);
{if ("" != null) return new CReadInput(readio.beginLine, id.image);}
    } else if (jj_2_2(2)) {
      id = jj_consume_token(ID);
      jj_consume_token(ATTRIB);
      exp = EXP();
      jj_consume_token(SEMICOLON);
{if ("" != null) return new CAtribuicao(id.beginLine, id.image, exp);}
    } else if (jj_2_3(2)) {
      id = jj_consume_token(ID);
      jj_consume_token(APAREN);
      exps = LISTAEXP();
      jj_consume_token(FPAREN);
      jj_consume_token(SEMICOLON);
{if ("" != null) return new CChamadaFun(id.beginLine, id.image, exps);}
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:{
        t = jj_consume_token(IF);
        exp = EXP();
        jj_consume_token(ACHAVES);
        coms = SEQCOMANDOS();
        jj_consume_token(FCHAVES);
        jj_consume_token(SEMICOLON);
{if ("" != null) return new CIf(t.beginLine, exp, coms);}
        break;
        }
      case WHILE:{
        t = jj_consume_token(WHILE);
        jj_consume_token(APAREN);
        exp = EXP();
        jj_consume_token(FPAREN);
        jj_consume_token(DO);
        jj_consume_token(ACHAVES);
        coms = SEQCOMANDOS();
        jj_consume_token(FCHAVES);
        jj_consume_token(SEMICOLON);
{if ("" != null) return new CWhile(t.beginLine, exp, coms);}
        break;
        }
      case RETURN:{
        t = jj_consume_token(RETURN);
        exp = EXP();
        jj_consume_token(SEMICOLON);
{if ("" != null) return new CReturn(t.beginLine, exp);}
        break;
        }
      case PRINTIO:{
        t = jj_consume_token(PRINTIO);
        exp = EXP();
        jj_consume_token(SEMICOLON);
{if ("" != null) return new CPrint(t.beginLine, exp);}
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
}

  final public Exp EXP() throws ParseException {String t = null;
  Exp exp1 = null;
  Exp exp2 = null;
  Exp result = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case APAREN:{
      jj_consume_token(APAREN);
      exp1 = EXP();
      t = OP();
      exp2 = EXP();
      jj_consume_token(FPAREN);
result=new EOpExp(t, exp1, exp2);
      break;
      }
    case TRUE:
    case FALSE:
    case NUM:
    case ID:
    case STRING_LITERAL:{
      exp1 = FATOR();
result=exp1;
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return result;}
    throw new Error("Missing return statement in function");
}

  final public Exp FATOR() throws ParseException {Token id = null;
   Token num = null;
   Token str_literal = null;
   ArrayList<Exp> args = null;
    if (jj_2_4(2)) {
      id = jj_consume_token(ID);
      jj_consume_token(APAREN);
      args = LISTAEXP();
      jj_consume_token(FPAREN);
{if ("" != null) return new EChamadaFun(id.image, args);}
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ID:{
        id = jj_consume_token(ID);
{if ("" != null) return new EVar(id.image);}
        break;
        }
      case NUM:{
        num = jj_consume_token(NUM);
{if ("" != null) return new EFloat(Float.parseFloat(num.image));}
        break;
        }
      case STRING_LITERAL:{
        str_literal = jj_consume_token(STRING_LITERAL);
{if ("" != null) return null;}
        break;
        }
      case TRUE:{
        jj_consume_token(TRUE);
{if ("" != null) return new ETrue();}
        break;
        }
      case FALSE:{
        jj_consume_token(FALSE);
{if ("" != null) return new EFalse();}
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
}

  final public String OP() throws ParseException {Token t = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PLUS:{
      t = jj_consume_token(PLUS);
      break;
      }
    case MINUS:{
      t = jj_consume_token(MINUS);
      break;
      }
    case MULT:{
      t = jj_consume_token(MULT);
      break;
      }
    case DIV:{
      t = jj_consume_token(DIV);
      break;
      }
    case AND:{
      t = jj_consume_token(AND);
      break;
      }
    case OR:{
      t = jj_consume_token(OR);
      break;
      }
    case LESSOP:{
      t = jj_consume_token(LESSOP);
      break;
      }
    case MOREOP:{
      t = jj_consume_token(MOREOP);
      break;
      }
    case EQUALS:{
      t = jj_consume_token(EQUALS);
      break;
      }
    case LESSEQ:{
      t = jj_consume_token(LESSEQ);
      break;
      }
    case MOREEQ:{
      t = jj_consume_token(MOREEQ);
      break;
      }
    case MODULO:{
      t = jj_consume_token(MODULO);
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return t.image;}
    throw new Error("Missing return statement in function");
}

  final public ArrayList<Exp> LISTAEXP() throws ParseException {ArrayList<Exp> exps = new ArrayList<Exp>();
  Exp exp = null;
    exp = EXP();
exps.add(exp);
    LISTAEXP_L(exps);
{if ("" != null) return exps;}
    throw new Error("Missing return statement in function");
}

  final public void LISTAEXP_L(ArrayList<Exp> exps) throws ParseException {Exp exp = null;
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        break label_4;
      }
      jj_consume_token(COMMA);
      exp = EXP();
exps.add(exp);
    }
}

  final public ArrayList<ParamFormalFun> LISTAARG() throws ParseException {String type = null;
  Token var_id;
  ArrayList<ParamFormalFun> params = new ArrayList<ParamFormalFun>();
    type = TIPO();
    var_id = jj_consume_token(ID);
params.add(new ParamFormalFun(type, var_id.image));
    LISTAARG_L(params);
{if ("" != null) return params;}
    throw new Error("Missing return statement in function");
}

  final public void LISTAARG_L(ArrayList<ParamFormalFun> params) throws ParseException {String type = null;
  Token rvar_id = null;
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        break label_5;
      }
      jj_consume_token(COMMA);
      type = TIPO();
      rvar_id = jj_consume_token(ID);
params.add( new ParamFormalFun(type, rvar_id.image) );
    }
}

  final public ArrayList<Fun> FUNC() throws ParseException {ArrayList<Fun> funs = new ArrayList<Fun>();
    Fun fun = null;
    fun = FUNC_D();
funs.add(fun);
    FUNC_L(funs);
{if ("" != null) return funs;}
    throw new Error("Missing return statement in function");
}

  final public void FUNC_L(ArrayList<Fun> funs) throws ParseException {Fun fun = null;
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DEF:{
        ;
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        break label_6;
      }
      fun = FUNC_D();
funs.add(fun);
    }
}

  final public Fun FUNC_D() throws ParseException {Token name;
  ArrayList<VarDecl> vars = null;
  ArrayList<Comando> coms = null;
  ArrayList<ParamFormalFun> params = null;
  String retorno = null;
    jj_consume_token(DEF);
    retorno = TIPO();
    name = jj_consume_token(ID);
    jj_consume_token(APAREN);
    params = LISTAARG();
    jj_consume_token(FPAREN);
    jj_consume_token(ACHAVES);
    vars = VARDECL();
    coms = SEQCOMANDOS();
    jj_consume_token(FCHAVES);
{if ("" != null) return new Fun(name.image, params, retorno, vars, coms);}
    throw new Error("Missing return statement in function");
}

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_3()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_4()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_3_3()
 {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(APAREN)) return true;
    return false;
  }

  private boolean jj_3_1()
 {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(ATTRIB)) return true;
    if (jj_scan_token(READIO)) return true;
    return false;
  }

  private boolean jj_3_2()
 {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(ATTRIB)) return true;
    return false;
  }

  private boolean jj_3_4()
 {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(APAREN)) return true;
    return false;
  }

  /** Generated Token Manager. */
  public LugosiTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[13];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
	   jj_la1_init_0();
	   jj_la1_init_1();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x0,0x0,0x1000,0x0,0x2e800,0xca00000,0xca00000,0x30080000,0x30000000,0xc0000000,0x0,0x0,0x0,};
	}
	private static void jj_la1_init_1() {
	   jj_la1_1 = new int[] {0x400,0x400,0x0,0x800,0x0,0x2000,0x0,0xb000,0xb000,0x3ff,0x800,0x800,0x400,};
	}
  final private JJCalls[] jj_2_rtns = new JJCalls[4];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  /** Constructor with InputStream. */
  public Lugosi(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Lugosi(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new LugosiTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 13; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 13; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public Lugosi(java.io.Reader stream) {
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new LugosiTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 13; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new LugosiTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 13; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public Lugosi(LugosiTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 13; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(LugosiTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 13; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   if (++jj_gc > 100) {
		 jj_gc = 0;
		 for (int i = 0; i < jj_2_rtns.length; i++) {
		   JJCalls c = jj_2_rtns[i];
		   while (c != null) {
			 if (c.gen < jj_gen) c.first = null;
			 c = c.next;
		   }
		 }
	   }
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }

  @SuppressWarnings("serial")
  static private final class LookaheadSuccess extends java.lang.Error {
    @Override
    public Throwable fillInStackTrace() {
      return this;
    }
  }
  static private final LookaheadSuccess jj_ls = new LookaheadSuccess();
  private boolean jj_scan_token(int kind) {
	 if (jj_scanpos == jj_lastpos) {
	   jj_la--;
	   if (jj_scanpos.next == null) {
		 jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
	   } else {
		 jj_lastpos = jj_scanpos = jj_scanpos.next;
	   }
	 } else {
	   jj_scanpos = jj_scanpos.next;
	 }
	 if (jj_rescan) {
	   int i = 0; Token tok = token;
	   while (tok != null && tok != jj_scanpos) { i++; tok = tok.next; }
	   if (tok != null) jj_add_error_token(kind, i);
	 }
	 if (jj_scanpos.kind != kind) return true;
	 if (jj_la == 0 && jj_scanpos == jj_lastpos) throw jj_ls;
	 return false;
  }


/** Get the next Token. */
  final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;
  private int[] jj_lasttokens = new int[100];
  private int jj_endpos;

  private void jj_add_error_token(int kind, int pos) {
	 if (pos >= 100) {
		return;
	 }

	 if (pos == jj_endpos + 1) {
	   jj_lasttokens[jj_endpos++] = kind;
	 } else if (jj_endpos != 0) {
	   jj_expentry = new int[jj_endpos];

	   for (int i = 0; i < jj_endpos; i++) {
		 jj_expentry[i] = jj_lasttokens[i];
	   }

	   for (int[] oldentry : jj_expentries) {
		 if (oldentry.length == jj_expentry.length) {
		   boolean isMatched = true;

		   for (int i = 0; i < jj_expentry.length; i++) {
			 if (oldentry[i] != jj_expentry[i]) {
			   isMatched = false;
			   break;
			 }

		   }
		   if (isMatched) {
			 jj_expentries.add(jj_expentry);
			 break;
		   }
		 }
	   }

	   if (pos != 0) {
		 jj_lasttokens[(jj_endpos = pos) - 1] = kind;
	   }
	 }
  }
